fix/conversation-query-null-safety-and-pcap-export
Harden ConversationQueryService (issues pre-existed in AnalysisService,
fixed now that the code moved here):

- getConversationDetail: build the geo lookup set with null checks
  instead of List.of(srcIp, dstIp), which NPEs on null IPs
- exportConversationAsPcap: guard conv.getFile()/minioPath before
  download (throws IOException instead of NPE)
- both PCAP exports: destroyForcibly() the tshark process on interrupt
  to avoid orphaned processes
- bulk export: throw on non-zero tshark exit (was warn-only) so we never
  stream a corrupt/partial PCAP, matching the single-conversation export
- buildGeoMap: filter null/blank IPs; return Collections.emptyMap() on
  failure (null-key-safe). buildFileTypeMap: Collections.emptyMap()

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>